# simu

./: CMakeLists.txt  README.md  package.xml
include/simu/: NoiseGenerator.h  SimuCommon.h  SimulatedMass.h  SimulatedVelocitySensor.h  SimulationCore.h
nodes/: simulator_node.cpp
scripts/: ParameterDependentNoise.py  ParameterDependentRandomRate.py  ParameterDependentRate.py  ParameterSplitter.py  StateDependentNoise.py
src/: NoiseGenerator.cpp  SimuCommon.cpp  SimulatedMass.cpp  SimulatedVelocitySensor.cpp  SimulationCore.cpp
srv/: InitializeSimulation.srv  SetBodyPose.srv  SetBodyVelocity.srv  SetNoiseProperties.srv
