<?xml version="1.0"?>
<package>
  <name>simu</name>
  <version>0.0.1</version>
  <description>Ground robot simulation and emulation.</description>
  
  <maintainer email="humhu@cmu.edu">Humphrey Hu</maintainer>
  
  
  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>AFLv3</license>
  
  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>argus_utils</build_depend>
  <build_depend>extrinsics_array</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>paraset</build_depend>

  <run_depend>argus_utils</run_depend>
  <run_depend>extrinsics_array</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>paraset</run_depend>
  
</package>
